<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="195dp"
        android:layout_height="54dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/satoshi_medium"
            android:text="@string/cijeni" />

        <RadioButton
            android:id="@+id/radioDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/satoshi_medium"
            android:text="@string/udaljenosti" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerStoreCount"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/satoshi_medium"
        app:layout_constraintBottom_toTopOf="@+id/btnApply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnApply"
        android:layout_width="141dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/glavna"
        android:fontFamily="@font/satoshi_medium"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/satoshi_medium"
        android:text="@string/broj_trgovina"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnApply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/satoshi_medium"
        android:text="@string/soritiraj_po"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
