<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="0dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="0dp"
    android:background="@drawable/custom_searchbar"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/custom_searchbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            app:cardCornerRadius="7dp"
            app:strokeWidth="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
          >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:src="@drawable/placeholder_store1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/description"
                app:contentDescription="@string/description"
                />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/StoreName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/satoshi_bold"
            android:text="@string/naziv_du_ana"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ArticlePrice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/satoshi_bold"
            android:text="@string/cijena_proizvoda_du_ana"
            android:textSize="16sp"
            android:gravity="end
"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/StoreDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/satoshi_regular"
            android:text="@string/kilometra_a"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/iconlittle2"
            app:layout_constraintStart_toEndOf="@+id/iconlittle2"
            app:layout_constraintTop_toTopOf="@+id/iconlittle2" />

        <TextView
            android:id="@+id/workingBool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/satoshi_regular"
            android:text="@string/otvoreno"
            android:textColor="@color/confirm"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/iconlittle1"
            app:layout_constraintStart_toEndOf="@+id/iconlittle1"
            app:layout_constraintTop_toTopOf="@+id/iconlittle1" />

        <ImageView
            android:id="@+id/iconlittle1"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/StoreName"
            app:layout_constraintTop_toBottomOf="@+id/StoreName"
            android:src="@drawable/icon_open_bool"
            android:contentDescription="@string/description"/>

        <ImageView
            android:id="@+id/iconlittle2"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="11dp"
            android:src="@drawable/icon_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/iconlittle1"
            app:layout_constraintTop_toBottomOf="@+id/iconlittle1"
            android:contentDescription="@string/description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
