<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/glavna"
    tools:context=".ui.screens.ArticleListFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/satoshi_bold"
        android:text="@string/stvori_svoj_popis_za_kupovinu"
        android:lineHeight="32sp"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnTopCard"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/btnScrollToTop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:scaleType="centerInside"
                android:src="@drawable/icon_backtotop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMain"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minHeight="430dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="600dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="400dp">

            <TextView
                android:id="@+id/empty_list_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/satoshi_bold"
                android:gravity="center"
                android:text="@string/ups_tvoj_popis_je_prazan"
                android:textAlignment="center"
                android:textColor="@color/glavna"
                android:textSize="20sp"
                android:lineHeight="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewEmpty" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="16dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:listitem="@layout/item_article" />

            <ImageView
                android:id="@+id/imageViewEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="104dp"
                android:src="@drawable/icon_empty_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list" />

            <TextView
                android:id="@+id/underEmptyListText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/satoshi_regular"
                android:textSize="14sp"
                android:lineHeight="20sp"
                android:gravity="center"
                android:text="@string/skeniraj_ru_no_pisani_popis_ili_dodaj_artikle_kako_bi_krenuo_s_pametnom_kupovinom"
                android:textColor="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/empty_list_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="150dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/btnAdvance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="30dp"
        android:background="@null"
        android:elevation="20dp"
        android:src="@drawable/button_grayed_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnScan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:contentDescription="@string/button_scan"
                android:scaleX="1.1"
                android:scaleY="1.1"
                app:srcCompat="@drawable/icon_camera"
                app:tint="@color/glavna" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:contentDescription="@string/button_add"
                android:scaleX="1.1"
                android:scaleY="1.1"
                app:srcCompat="@drawable/icon_plus_add"
                app:tint="@color/glavna" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/satoshi_medium"
            android:textSize="16sp"
            android:text="@string/dodaj"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/satoshi_medium"
            android:textSize="16sp"
            android:text="@string/skeniraj"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>